// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectableCardField should render correctly 1`] = `
<DocumentFragment>
  .cache-1loeen1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-1loeen1[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1loeen1[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1loeen1[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-skcdvj {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-skcdvj[aria-disabled='false'],
.cache-skcdvj[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-skcdvj[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-skcdvj[data-checked='true'] {
  color: #521094;
}

.cache-skcdvj[data-error='true'] {
  color: #ac2740;
}

.cache-skcdvj[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-skcdvj input+svg {
  display: none;
}

.cache-skcdvj label {
  display: none;
}

.cache-14wri1s {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-14wri1s+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-14wri1s:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14wri1s:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-14wri1s[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-14wri1s:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-14wri1s:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-2w4i5k {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-2w4i5k .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-rr6ito {
  fill: #f9f9fa;
}

<form
    novalidate=""
  >
    <div
      class="cache-1loeen1 e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-skcdvj ehkrmld0"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-14wri1s ehkrmld1"
          id="test-test"
          name="test"
          type="radio"
          value="test"
        />
        <svg
          class="cache-2w4i5k ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-rr6ito ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly checked 1`] = `
<DocumentFragment>
  .cache-1loeen1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-1loeen1[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1loeen1[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1loeen1[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-skcdvj {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-skcdvj[aria-disabled='false'],
.cache-skcdvj[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-skcdvj[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-skcdvj[data-checked='true'] {
  color: #521094;
}

.cache-skcdvj[data-error='true'] {
  color: #ac2740;
}

.cache-skcdvj[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-skcdvj input+svg {
  display: none;
}

.cache-skcdvj label {
  display: none;
}

.cache-14wri1s {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-14wri1s+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-14wri1s:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14wri1s:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-14wri1s[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-14wri1s:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-14wri1s:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-2w4i5k {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-2w4i5k .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-rr6ito {
  fill: #f9f9fa;
}

<form
    novalidate=""
  >
    <div
      class="cache-1loeen1 e1s5n3hj1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-skcdvj ehkrmld0"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          checked=""
          class="cache-14wri1s ehkrmld1"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-2w4i5k ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-rr6ito ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field checked
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly disabled 1`] = `
<DocumentFragment>
  .cache-1loeen1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-1loeen1[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1loeen1[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1loeen1[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-skcdvj {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-skcdvj[aria-disabled='false'],
.cache-skcdvj[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-skcdvj[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-skcdvj[data-checked='true'] {
  color: #521094;
}

.cache-skcdvj[data-error='true'] {
  color: #ac2740;
}

.cache-skcdvj[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-skcdvj input+svg {
  display: none;
}

.cache-skcdvj label {
  display: none;
}

.cache-14wri1s {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-14wri1s+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-14wri1s:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14wri1s:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-14wri1s[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-14wri1s:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-14wri1s:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-2w4i5k {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-2w4i5k .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-rr6ito {
  fill: #f9f9fa;
}

<form
    novalidate=""
  >
    <div
      class="cache-1loeen1 e1s5n3hj1"
      data-checked="false"
      data-disabled="true"
      data-error="false"
    >
      <div
        aria-disabled="true"
        class="e1s5n3hj0 cache-skcdvj ehkrmld0"
        data-checked="false"
        data-error="false"
      >
        <input
          aria-disabled="true"
          aria-invalid="false"
          class="cache-14wri1s ehkrmld1"
          disabled=""
          id="test-disabled"
          name="test"
          type="radio"
          value="disabled"
        />
        <svg
          class="cache-2w4i5k ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-rr6ito ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field disabled
    </div>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should render correctly with errors 1`] = `
<DocumentFragment>
  .cache-1loeen1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-1loeen1[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1loeen1[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1loeen1[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-skcdvj {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-skcdvj[aria-disabled='false'],
.cache-skcdvj[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-skcdvj[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-skcdvj[data-checked='true'] {
  color: #521094;
}

.cache-skcdvj[data-error='true'] {
  color: #ac2740;
}

.cache-skcdvj[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-skcdvj input+svg {
  display: none;
}

.cache-skcdvj label {
  display: none;
}

.cache-14wri1s {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-14wri1s+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-14wri1s:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14wri1s:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-14wri1s[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-14wri1s:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-14wri1s:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-2w4i5k {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-2w4i5k .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-rr6ito {
  fill: #f9f9fa;
}

<form
    novalidate=""
  >
    <div
      class="cache-1loeen1 e1s5n3hj1"
      data-checked="false"
      data-disabled="false"
      data-error="true"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-skcdvj ehkrmld0"
        data-checked="false"
        data-error="true"
      >
        <input
          aria-disabled="false"
          aria-invalid="true"
          class="cache-14wri1s ehkrmld1"
          id="test-checked"
          name="test"
          type="radio"
          value="checked"
        />
        <svg
          class="cache-2w4i5k ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-rr6ito ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field error
    </div>
    <button
      type="submit"
    >
      Submit
    </button>
  </form>
</DocumentFragment>
`;

exports[`SelectableCardField should trigger events correctly 1`] = `
<DocumentFragment>
  .cache-1loeen1 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
  padding: 16px;
  border-radius: 4px;
  -webkit-transition: border-color 200ms ease,box-shadow 200ms ease;
  transition: border-color 200ms ease,box-shadow 200ms ease;
  cursor: pointer;
  background: #ffffff;
  border: 1px solid #e9eaeb;
  color: #464959;
}

.cache-1loeen1[data-checked='true'] {
  border: 1px solid #521094;
}

.cache-1loeen1[data-error='true'] {
  border: 1px solid #ac2740;
}

.cache-1loeen1[data-disabled='true'] {
  border: 1px solid #d9dadd;
  color: #b5b7bd;
  background: #f3f3f4;
  cursor: not-allowed;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true']),
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true']) {
  border: 1px solid #521094;
}

.cache-1loeen1:hover:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:focus-within:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'],
.cache-1loeen1:active:not([data-error='true']):not([data-disabled='true'])[data-cheked='false'] {
  box-shadow: 0px 4px 16px 4px #F6F3FFCC;
}

.cache-skcdvj {
  position: relative;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  gap: 8px;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: start;
  -webkit-box-align: start;
  -ms-flex-align: start;
  align-items: start;
}

.cache-skcdvj[aria-disabled='false'],
.cache-skcdvj[aria-disabled='false']>label {
  cursor: pointer;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-skcdvj:hover[aria-disabled='false'] .ehkrmld1[aria-invalid='true']+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-skcdvj[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true']>label {
  cursor: not-allowed;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 {
  fill: #b5b7bd;
}

.cache-skcdvj[aria-disabled='true'] .ehkrmld2 .ehkrmld4 {
  fill: #e9eaeb;
}

.cache-skcdvj[data-checked='true'] {
  color: #521094;
}

.cache-skcdvj[data-error='true'] {
  color: #ac2740;
}

.cache-skcdvj[aria-disabled='true'] {
  color: #b5b7bd;
}

.cache-skcdvj input+svg {
  display: none;
}

.cache-skcdvj label {
  display: none;
}

.cache-14wri1s {
  cursor: pointer;
  position: absolute;
  height: 24px;
  width: 24px;
  opacity: 0;
  white-space: nowrap;
  border-width: 0;
}

.cache-14wri1s+.ehkrmld2 .ehkrmld3 {
  transform-origin: center;
  -webkit-transition: 200ms -webkit-transform ease-in-out;
  transition: 200ms transform ease-in-out;
  -webkit-transform: scale(0);
  -moz-transform: scale(0);
  -ms-transform: scale(0);
  transform: scale(0);
}

.cache-14wri1s:checked+svg .ehkrmld3 {
  -webkit-transform: scale(1);
  -moz-transform: scale(1);
  -ms-transform: scale(1);
  transform: scale(1);
}

.cache-14wri1s:checked[aria-disabled='false'][aria-invalid='false']+.ehkrmld2 {
  fill: #521094;
}

.cache-14wri1s[aria-invalid='true']:not([aria-disabled='true'])+.ehkrmld2 {
  fill: #ac2740;
}

.cache-14wri1s:focus+.ehkrmld2 {
  background-color: #ece5ff;
  fill: #521094;
}

.cache-14wri1s:focus+.ehkrmld2 .ehkrmld4 {
  fill: #ece5ff;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 {
  background-color: #fbe4e9;
  fill: #ac2740;
}

.cache-14wri1s[aria-invalid='true']:focus+.ehkrmld2 .ehkrmld4 {
  fill: #fbe4e9;
}

.cache-2w4i5k {
  height: 24px;
  width: 24px;
  min-width: 24px;
  min-height: 24px;
  border-radius: 100%;
  fill: #6d717c;
}

.cache-2w4i5k .ehkrmld4 {
  fill: #f9f9fa;
}

.cache-rr6ito {
  fill: #f9f9fa;
}

<form
    novalidate=""
  >
    <div
      class="cache-1loeen1 e1s5n3hj1"
      data-checked="true"
      data-disabled="false"
      data-error="false"
    >
      <div
        aria-disabled="false"
        class="e1s5n3hj0 cache-skcdvj ehkrmld0"
        data-checked="true"
        data-error="false"
      >
        <input
          aria-disabled="false"
          aria-invalid="false"
          class="cache-14wri1s ehkrmld1"
          id="test-events"
          name="test"
          type="radio"
          value="events"
        />
        <svg
          class="cache-2w4i5k ehkrmld2"
          size="24"
          viewBox="0 0 24 24"
        >
          <g>
            <circle
              cx="12"
              cy="12"
              r="8"
              stroke-width="2"
            />
            <circle
              class="cache-rr6ito ehkrmld4"
              cx="12"
              cy="12"
              r="6"
            />
            <circle
              class="cache-0 ehkrmld3"
              cx="12"
              cy="12"
              r="4"
            />
          </g>
        </svg>
      </div>
      Radio field events
    </div>
  </form>
</DocumentFragment>
`;
